# q2-nasp2

./: .gitattributes  setup.cfg  setup.py
ouput_test/: database.qza
ouput_test_bwa/: database.qza
ouput_test_bwa/bffdffcb-896f-4ce1-933d-2d452d66f5b6/: VERSION  checksums.md5  metadata.yaml
ouput_test_bwa/bffdffcb-896f-4ce1-933d-2d452d66f5b6/data/: dna-sequences.fasta.amb  dna-sequences.fasta.ann  dna-sequences.fasta.bwt  dna-sequences.fasta.pac  dna-sequences.fasta.sa
ouput_test_bwa/bffdffcb-896f-4ce1-933d-2d452d66f5b6/provenance/: citations.bib
plugins/q2-nasp2-types/q2_nasp2_types/: formats.py  types.py
plugins/q2-nasp2-types/q2_nasp2_types.egg-info/: top_level.txt
plugins/q2-readmappers/q2-bowtie2/: setup.py
q2-bowtie2/q2_bowtie2/: plugin_setup.py
q2-bowtie2/q2_bowtie2.egg-info/: SOURCES.txt  top_level.txt
q2-bowtie2/q2_bowtie2/actions/: map_reads.py  reference_index.py
q2-bwa/: setup.py
q2-bwa/q2_bwa.egg-info/: top_level.txt
q2-nasp2-types/: setup.py
q2-nasp2-types/q2_nasp2_types/: types.py
q2-readmappers/: setup.py
q2-readmappers/q2-bowtie2/q2_bowtie2/: __init__.py
q2-readmappers/q2-bwa/q2_bwa.egg-info/: PKG-INFO
q2-readmappers/q2_readmappers/: plugin_setup.py
q2-readmappers/q2_readmappers.egg-info/: SOURCES.txt
q2_nasp2/: _version.py  plugin_setup.py
q2_nasp2/actions/: nasp2.py
q2_readmappers/: __init__.py  _formats.py  _types.py  formats_types.py  plugin_setup.py
q2_readmappers.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
q2_readmappers/actions/: __init__.py  paired_end_align.py  reference_index.py
(+15 files in other folders)
