
[metadata]
name = q2-nasp2
url = github.com/CRideTGen/q2-nasp2
license = Academic and Research License
author = Chase Ridenour
author_email = cridenour@tgen.org
description = nasp2

[options]
package =
	find:
python_requires = >=3.6
zip_safe = no

[options.packages.find]
exclude=build tests

[options.entry_points]
qiime2.plugins =
	q2-nasp2 = q2_nasp2.plugin_setup:plugin


[versioneer]
VCS = git
style = pep440
versionfile_source = q2_nasp2/_version.py
versionfile_build = q2_nasp2/_version.py
tag_prefix = 0.0.1
parentdir_prefix = q2-nasp2